Add module for links

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,6 +15,7 @@
 @import "modules/flexHelper";
 @import "modules/profile";
 @import "modules/project";
+@import "modules/links";
 
 // import views
 @import "views/mainView";
