Add module for title
* Replaces .name
* Use more descriptive html (h1, h2)

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -16,6 +16,7 @@
 @import "modules/profile";
 @import "modules/project";
 @import "modules/links";
+@import "modules/title";
 
 // import views
 @import "views/mainView";
