--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -17,6 +17,7 @@
 @import "modules/project";
 @import "modules/links";
 @import "modules/title";
+@import "modules/cookieNote";
 
 // import views
 @import "views/mainView";
