--- a/app/styles/core/_vars.scss
+++ b/app/styles/core/_vars.scss
@@ -1,6 +1,7 @@
 // Colors
 $color-primary: #254441;
 $color-primary-highlight: #FF6F59;
+$color-primary-highlight-text: #F5F5F5;
 
 // Fonts
 $font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
