--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,8 +1,18 @@
 // import fonts
 @import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500);
 
+// import bootstrap vars
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/variables";
+
 // import vars
 @import "core/vars";
+
+// import bootstrap
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/grid";
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
 
 // import mixins
 @import "mixins/normalizeBoxSize";
@@ -10,14 +20,13 @@
 
 // import core
 @import "core/core";
+@import "core/headings";
 
 // modules
 @import "modules/flexHelper";
-@import "modules/headerImage";
-@import "modules/project";
-@import "modules/links";
-@import "modules/title";
 @import "modules/cookieNote";
+@import "modules/profile";
+@import "modules/project";
 
 // import views
-@import "views/mainView";
+@import "views/indexView";
