Use vars / optimize code

--- a/app/styles/core/_vars.scss
+++ b/app/styles/core/_vars.scss
@@ -1,14 +1,8 @@
 // Colors
-$color-primary: #254441;
-$color-primary-highlight: #FF6F59;
-$color-primary-highlight-text: #F5F5F5;
+$color-primary: #000000;
+$color-primary-highlight: #000000;
+$color-primary-highlight-text: #FFFFFF;
 
 // Fonts
 $font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$font-size-small: 8px;
-$font-size-normal: 15px;
-$font-size-large: 20px;
-$font-size-extra-large: 35px;
-$font-weight-light: 300;
 $font-weight-regular: 400;
-$font-weight-medium: 500;
