--- a/app/styles/core/_headings.scss
+++ b/app/styles/core/_headings.scss
@@ -1,6 +1,5 @@
 h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-  padding: 0;
+  @include normalizeBoxSize();
 }
 
 h1 {
@@ -69,12 +68,4 @@ h4 {
     margin-bottom: 25px;
     margin-top: 0;
   }
-}
-
-h5 {
-
-}
-
-h6 {
-
 }
