--- a/app/styles/modules/_cookieNote.scss
+++ b/app/styles/modules/_cookieNote.scss
@@ -8,10 +8,9 @@
   text-align: center;
   transition: .5s ease-out;
   border-bottom: 3px solid $color-primary-highlight-text;
-  // box-shadow: 0px 4px 5px 0px rgba(0,0,0,.6);
 
   &.cnOpen {
-    top: 0px;
+    top: 0;
   }
 
   .cnText, .cnButton {
