--- a/app/styles/views/_indexView.scss
+++ b/app/styles/views/_indexView.scss
@@ -2,6 +2,6 @@
   height: 100vh;
   width: 100vw;
 
-  background-color: #FFFFFF;
-  background-image: -webkit-linear-gradient(30deg, #000000 50%, #FFFFFF 50%);
+  background-color: $color-primary-highlight-text;
+  background-image: -webkit-linear-gradient(30deg, $color-primary-highlight 50%, $color-primary-highlight-text 50%);
 }
