--- a/themes/thml/layouts/partials/footer.html
+++ b/themes/thml/layouts/partials/footer.html
@@ -5,6 +5,7 @@
   </div>
 
   <!-- script -->
-  <script src="scripts/app.js" async></script>
+  {{ $scripts := resources.Get "scripts/cookieNote.js" | resources.Minify | resources.Fingerprint }}
+  <script src="{{ $scripts.Permalink }}" async></script>
 </body>
 </html>
