Add noopener to external links

--- a/themes/thml/layouts/index.html
+++ b/themes/thml/layouts/index.html
@@ -4,9 +4,9 @@
 <!-- Index View -->
 <div class="indexView">
   <div class="profileLinks">
-    <a target="_blank" href="https://github.com/themihel/"><img src="images/icons/github.svg" alt="Github - Profile"></a>
-    <a target="_blank" href="https://twitter.com/themihel"><img src="images/icons/twitter.svg" alt="Twitter - Profile"></a>
-    <a target="_blank" href="https://instagram.com/mischa.helfenstein"><img src="images/icons/instagram.svg" alt="Instagram - Profile"></a>
+    <a target="_blank" rel="noopener" href="https://github.com/themihel/"><img src="images/icons/github.svg" alt="Github - Profile"></a>
+    <a target="_blank" rel="noopener" href="https://twitter.com/themihel"><img src="images/icons/twitter.svg" alt="Twitter - Profile"></a>
+    <a target="_blank" rel="noopener" href="https://instagram.com/mischa.helfenstein"><img src="images/icons/instagram.svg" alt="Instagram - Profile"></a>
     <a href="mailto:helfenstein.mischa@gmail.com"><img src="images/icons/email.svg" alt="Email - Link"></a>
   </div>
   <div class="profilePhoto">
