--- a/themes/thml/assets/styles/modules/_project.scss
+++ b/themes/thml/assets/styles/modules/_project.scss
@@ -35,7 +35,7 @@
       text-decoration: none;
       font-size: 12px;
 
-      background-color: #CCCCCC;
+      background-color: #9c9a9a;
       color: white;
       border-radius: 5px;
     }
