Generalize the usage of variables

--- a/themes/thml/assets/styles/core/_core.scss
+++ b/themes/thml/assets/styles/core/_core.scss
@@ -9,4 +9,5 @@ body {
   font-family: $font-family;
   font-weight: $font-weight-regular;
   overflow-x: hidden;
+  background-color: $color-page-background;
 }
